--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.1.4",
     "@splinetool/react-spline": "^2.2.6",
     "@splinetool/runtime": "^0.9.358",
     "@tanstack/react-query": "^4.29.12",
