--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "antd": "^5.5.2",
+    "clsx": "^2.0.0",
     "cookies-next": "^2.1.1",
     "dayjs": "^1.11.8",
     "eslint": "8.42.0",
@@ -30,5 +31,6 @@
     "sass": "^1.62.1",
     "typescript": "5.1.3",
     "zustand": "^4.3.8"
-  }
+  },
+  "devDependencies": {}
 }
