--- a/package.json
+++ b/package.json
@@ -16,21 +16,23 @@
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
-    "antd": "^5.5.2",
+    "antd": "^5.9.4",
+    "axios": "^1.5.1",
     "clsx": "^2.0.0",
     "cookies-next": "^2.1.1",
     "dayjs": "^1.11.8",
     "eslint": "8.42.0",
-    "eslint-config-next": "13.4.4",
+    "eslint-config-next": "^13.5.3",
     "framer-motion": "^10.12.18",
     "immer": "^10.0.2",
-    "next": "13.4.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^13.5.3",
+    "prettier": "^3.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-use": "^17.4.0",
     "sass": "^1.62.1",
+    "socket.io-client": "^4.7.2",
     "typescript": "5.1.3",
     "zustand": "^4.3.8"
-  },
-  "devDependencies": {}
+  }
 }
