--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-APP_BASE_URL="socialnetwork.gearboost.eu:5000"
-APP_PROTOCOL="http"
+APP_BASE_URL="socialnetwork.gearboost.eu"
+APP_PROTOCOL="https"
